# sustainability

./: .env.example  .gitignore  AUDITS_GUIDE.md  FEATURES.md  LICENSE  README.md  SECURITY_FIX.md  SETUP_GUIDE.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/: .env.example  README.md  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/db/: mongo.py
backend/app/models/: carbon_emission_audit.py  email_verification.py  esg_audit.py  igbc_green_building_audit.py  otp.py  two_factor_auth.py  user.py
backend/app/routes/: audits.py  auth.py  session.py  user.py
backend/app/services/: auth_service.py
backend/app/utils/: email.py  otp_generator.py  password.py  validators.py
docs/: conf.py  index.rst
frontend/: README.md
frontend/public/: api.js  app.js  audit-api.js  audits.html  carbon-audit-form.html  carbon-audit.html  esg-audit.html  igbc-audit.html  index.html  styles.css
src/sustainability/: __init__.py  core.py
tests/: __init__.py  check_mongodb.py  test_core.py
